@@ -269,6 +269,8 @@ Extensions
 Tests
 -----
 
+- Fix possible "file already exists" error when running the tests in parallel.
+
 - Issue #11719: Fix message about unexpected test_msilib skip on non-Windows
   platforms. Patch by Nadeem Vawda.
 
